mock-exams/exam1/q13/secure-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secure-app
  labels:
    app: secure
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort:  8080
