mock-exams/exam1/q13/trusted-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: trusted-app
  labels:
    app: trusted
spec:
  containers:
    - name: busybox
      image: busybox:latest
      command: ["sleep","3600"]
